new branch recoverAppendTo

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "bittorrent-dht": false,
     "http": false,
     "fs": false,
-    "fs-chunk-store": "hybrid-chunk-store",
+    "fs-chunk-store": "memory-chunk-store",
     "load-ip-set": false,
     "net": false,
     "os": false,
@@ -46,6 +46,7 @@
     "cross-fetch-ponyfill": "^1.0.3",
     "debug": "^4.3.4",
     "escape-html": "^1.0.3",
+    "fast-blob-stream": "^1.1.1",
     "fs-chunk-store": "^4.0.1",
     "hybrid-chunk-store": "^1.2.0",
     "immediate-chunk-store": "^2.2.0",
@@ -61,6 +62,7 @@
     "random-iterate": "^1.0.1",
     "randombytes": "^2.1.0",
     "range-parser": "^1.2.1",
+    "render-media": "midzer/render-media",
     "run-parallel": "^1.2.0",
     "run-parallel-limit": "^1.1.0",
     "simple-concat": "^1.0.1",
